# CSSE4011-Practicals

./: .gitignore  README.md
oslib/ahu_drivers/ahu_hci/: ahu_hci.c  ahu_hci.h
oslib/ahu_drivers/ahu_pin_ctrl/: pin_ctrl.c  pin_ctrl.h
oslib/ahu_drivers/ahu_uart/: ahu_uart.c  ahu_uart.h
oslib/bsu_drivers/bsu_hci/: bsu_hci.c  bsu_hci.h
oslib/common_drivers/common_hci/: common_hci.c  common_hci.h
prac1/ahu/: CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml
prac1/ahu/src/: all.c  all.h  hts221.c  hts221.h  led_module.c  led_module.h  lps22.c  lps22.h  lsm6dsl.c  lsm6dsl.h  main.c  pushbutton.c  pushbutton.h  rgb_module.c  rgb_module.h  sample.c  sample.h  time.c  time.h
prac2/bsu/: CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml
prac2/bsu/src/: bluetooth.c  bluetooth.h  main.c
prac2/dv/: dv.py
prac3/: README.md
prac3/base/: CMakeLists.txt  README.md  sample.yaml
prac3/base/src/: bluetooth.c  bluetooth.h  list.c  list.h  main.c  uart.c  uart.h  usb.c  usb.h
prac3/mobile/: CMakeLists.txt  README.md  prj.conf  sample.yaml
prac3/mobile/src/: bluetooth.c  bluetooth.h  led.c  led.h  main.c
